test/ui/tests/packages/syntactically-invalid-manifests/duplicate-entries/package.metadata
# TEST fail check

hey: "it's me",
hey: "it's me again",

more: { , "
